Added some div with text

--- a/hello.html
+++ b/hello.html
@@ -2,5 +2,8 @@
 	<head></head>
 <body>
 	<h1>hello world!</h1>
+	<div>
+		Hi my name is <span style="color: green;">Marsell</span>
+	</div>
 </body>
 </html>
